# yolo-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yaml
