[tool.poetry]
name = "yolo-fastapi"
version = "0.1.0"
description = ""
authors = ["Daniel García Peña <danigarciape@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
opencv-python-headless = "^4.10.0.84"
ultralytics = "^8.3.32"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
